--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="w-75 m-auto">
           </div>
           <h1>All art is Here</h1>
-          <h6>Enroll with Growwithasfa</h5>
+          <h6>Enroll with Asfa</h5>
         </div>
       </div>
     </div>
