--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="x-icon" href="Asfa Logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GrowWithAsfa</title>
@@ -57,7 +58,7 @@
         </div>
     </div>
   </section>
-  <form>
+  <form action="post" data-netlify="true">
     <div class="mb-3">
         <label class="form-label">Name</label>
         <input type="text" class="form-control" placeholder="Enter Your Name...">
