--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="Asfa Logo.png">
@@ -15,7 +15,6 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css">
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg bg-black py-0 text-uppercase sticky-top">
     <div class="container">
@@ -49,6 +48,15 @@
       </div>
     </div>
   </nav>
+  <section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img-fluid bg-black" src="/Asfa Logo.png" alt="">
+            </div>
+        </div>
+    </div>
+  </section>
   <section class="pt-5">
     <div class="container-fluid bg-black">
       <div class="row">
