--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="x-icon" href="Asfa Logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GrowWithAsfa</title>
+  <title>GrowWithAsfa-Learn to Earn</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400&display=swap"
@@ -112,7 +112,7 @@
       <div class="container mb-0">
         <div class="row">
           <div class="col-md-12">
-            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa❤︎</p>
+            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa</p>
           </div>
         </div>
       </div>
