--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="x-icon" href="Asfa Logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GrowWithAsfa</title>
+  <title>GrowWithAsfa-Learn to Earn</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400&display=swap"
@@ -58,9 +58,9 @@
         </div>
     </div>
   </section>
-  <form>
+  <form action="/main.html" data-netlify="true">
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
@@ -74,7 +74,7 @@
     <div>
         <p><a href="#">Forget your password ?</a></p>
     </div>
-    <button type="submit" class="btn btn-warning">Submit</button>
+    <button type="submit" class="btn btn-warning" onclick="login()">Login</button>
   </form>
   <section class="pt-5">
     <div class="container-fluid bg-black">
@@ -93,7 +93,7 @@
       <div class="container mb-0">
         <div class="row">
           <div class="col-md-12">
-            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa❤︎</p>
+            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa</p>
           </div>
         </div>
       </div>
@@ -101,6 +101,7 @@
   </section>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+</script>
 
 </html>
