--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="x-icon" href="Asfa Logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GrowWithAsfa</title>
+  <title>GrowWithAsfa-Learn to Earn</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400&display=swap"
@@ -58,7 +58,7 @@
         </div>
     </div>
   </section>
-  <form action="post" data-netlify="true">
+  <form action="/login.html" data-netlify="true">
     <div class="mb-3">
         <label class="form-label">Name</label>
         <input type="text" class="form-control" placeholder="Enter Your Name...">
@@ -87,7 +87,7 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">I agree the privacy policy and terms & condition</label>
     </div>
-    <button type="submit" class="btn btn-warning ">Sign Up</button>
+    <button type="submit" class="btn btn-warning " onclick="signup()">Sign Up</button>
   </form>
   <section class="pt-5">
     <div class="container-fluid bg-black">
@@ -106,7 +106,7 @@
       <div class="container mb-0">
         <div class="row">
           <div class="col-md-12">
-            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa❤︎</p>
+            <p class="text-center m-0">&copy; 2024. Designed and Devoloped by Asfa</p>
           </div>
         </div>
       </div>
